Now you can get properties by province. Some bug fixes in PropertyService.
