# controllers/Property.js
@@ -15,6 +15,29 @@ module.exports.deleteUserProperty = function deleteUserProperty (req, res, next)
     });
 };
 
+module.exports.getPropertiesByProvince = function getPropertiesByProvince (req, res, next) {
+  var province = req.swagger.params['province'].value;
+  Property.getPropertiesByProvince(province)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getPropertiesByTown = function getPropertiesByTown (req, res, next) {
+  var province = req.swagger.params['province'].value;
+  var town = req.swagger.params['town'].value;
+  Property.getPropertiesByTown(province,town)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.getUserProperties = function getUserProperties (req, res, next) {
   var username = req.swagger.params['username'].value;
   Property.getUserProperties(username)
@@ -42,18 +65,6 @@ module.exports.postUserProperty = function postUserProperty (req, res, next) {
   var book = req.swagger.params['book'].value;
   var username = req.swagger.params['username'].value;
   Property.postUserProperty(book,username)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.getPropertiesByPosition = function getPropertiesByPosition (req, res, next) {
-  var province = req.swagger.params['province'].value;
-  var town = req.swagger.params['town'].value;
-  Property.getPropertiesByPosition(province,town)
     .then(function (response) {
       utils.writeJson(res, response);
     })
